Bug 1661860 - RemoteWorkerManager should transmit blobs and permissions when spawning any remote worker type. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D88884